--- a/src/Mzayad.Web/Views/Home/SignalR.cshtml
+++ b/src/Mzayad.Web/Views/Home/SignalR.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 
 
-    var auctionIds = new List<int> {1, 2, 3};
+    var auctionIds = new List<int> {1};
 
     if (Request.QueryString["AuctionId"] != null)
     {
