--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -37,7 +37,10 @@ else
                 <div class="col-md-6 live-ribbon-container">
                     <img class="auction-image img-responsive" data-bind="attr: { src: imageUrl, alt: title }" alt="">
                     <div class="sponsor-ribbon"><span data-bind="text:sponsorName"></span></div>
-                    <div data-bind="text: countryList "></div>
+                    <div class="flag-container" data-bind="foreach: countryListArray ">
+                       <i class="flag" data-bind="css: {'flag-' + $data: true}"></i>  
+                    </div>
+                    
                 </div>
 
                 <div class="col-md-6">
