MZ-193 add admin pages to manage prizes

--- a/src/Mzayad.Web/Views/Shared/_Layout_AdminMenu.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_AdminMenu.cshtml
@@ -16,7 +16,8 @@
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Levels", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-line-chart"></i>Levels</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "islamiccalendar", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-table"></i>Islamic Calendar</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Avatars", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-rocket"></i>Avatars</a></li>
-            <li><a href="@Url.Action("Index", "Subscriptions", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-gift"></i>Subscriptions</a></li>
+            <li><a href="@Url.Action("Index", "Subscriptions", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-money"></i>Subscriptions</a></li>
+            <li><a href="@Url.Action("Index", "Prizes", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-gift"></i>Prizes</a></li>
             <li><a href="@Url.Action("Index", "SplashAds", new { Area = "Admin" })"><i class="fa fa-fw fa-pad-right fa-mobile"></i>Mobile Splash Ads</a></li>
             <li><a href="@Url.Action("EmailTemplates", "Settings", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li>
             <li><a href="@Url.Action("Index", "WishLists", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-star"></i>Wishlists</a></li>
