--- a/src/Mzayad.Web/Views/Orders/Success.cshtml
+++ b/src/Mzayad.Web/Views/Orders/Success.cshtml
@@ -6,12 +6,20 @@
 
 @section styles{
     <style>
-    .alert {
-        font-size: 16px;
-    }
-</style>
+        .alert {
+            font-size: 16px;
+        }
+    </style>
 }
 
 @Html.StatusMessage(Global.OrderSuccessMessage)
 
+
+@if (!string.IsNullOrEmpty(Model.RedirectUrl))
+{
+    @Html.StatusMessage(string.Format(Global.PrizeChanceMessage, Model.RedirectUrl))
+}
+
+
 @Html.Partial("OrderDetailsSummary", Model)
+
