MZ-193 update prize secury url .

--- a/src/Mzayad.Web/Views/Prize/Index.cshtml
+++ b/src/Mzayad.Web/Views/Prize/Index.cshtml
@@ -105,7 +105,7 @@
                         url: "prize/random-prize",
                         context: document.body,
                         method: 'POST',
-                        data: { email:"@Model.Token.Email" timestamp: "@Model.Token.Timestamp", token: "@Model.Token.Token" }
+                        data: { email:"@Model.Token.Email", timestamp: "@Model.Token.Timestamp", token: "@Model.Token.Token" }
                     }).done(function(prizeStr) {
                         var index = -1;
                         var prize = $.parseJSON(prizeStr);
