MZ-194 proccess premium avatar prize

--- a/src/Mzayad.Web/Views/Prize/Index.cshtml
+++ b/src/Mzayad.Web/Views/Prize/Index.cshtml
@@ -88,9 +88,8 @@
             var winningSegment = theWheel.getIndicatedSegment();
             alertify.alert(message, function() {
                 if (type == 3) {
-                    //ToDo Redirect to select avatar page.
+                    location.href = "prize//select-avatar";
                 }
-                //location.href = "prize/get-redirect/" + winningSegment.prizeId;
             });
         };
 
