--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -308,6 +308,33 @@ body {
 .panel {
   border-radius: 0;
 }
+.avatar-container {
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+.avatar-premium {
+  position: absolute;
+  background-color: #33ace0;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  top: 0px;
+  right: 0px;
+  z-index: 10000;
+  -ms-transform: rotate(30deg) translateX(70px);
+  /* IE 9 */
+  -webkit-transform: rotate(30deg) translateX(70px);
+  /* Chrome, Safari, Opera */
+  transform: rotate(30deg) translateX(25%);
+}
+.selectedImg {
+  border: solid 2px #000000;
+  padding: 5px;
+}
+.normalImg {
+  cursor: pointer;
+}
 form section,
 section.form-section {
   background: #f5f5f5;
