MZ-193 update flag position

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -20,15 +20,15 @@
 
         .flag-container {
             position: absolute;
-            top: 30px;
-            right: 40px;
+            top: -5px;
+            right: 6.5%;
             z-index: 100;
         }
 
         .flag-container2 {
             position: absolute;
-            top: 0px;
-            right: 5px;
+            top: 2%;
+            right: 4%;
             z-index: 100;
         }
 
