MZ-194 change order  success page UI for prize section

--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -332,3 +332,31 @@ body {
 .normalImg {
     cursor: pointer;
 }
+
+.prize-container {
+    background-color: #33ace0;
+    color: #fff;
+    margin: 20px auto;
+    text-align: center;
+
+    img{
+        width: 100px;
+        display: inline-block;
+        margin:20px auto; 
+        padding:0px;       
+    }
+    h1{
+        font-size:25px;
+        padding:0;
+        margin: 0;
+        margin-bottom:20px;
+    }
+    p{
+        padding-bottom:20px;
+        font-size:18px;
+    }
+    a{
+        color: #fff !important;
+        text-decoration: underline;
+    }
+}
