--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -335,6 +335,32 @@ body {
 .normalImg {
   cursor: pointer;
 }
+.prize-container {
+  background-color: #33ace0;
+  color: #fff;
+  margin: 20px auto;
+  text-align: center;
+}
+.prize-container img {
+  width: 100px;
+  display: inline-block;
+  margin: 20px auto;
+  padding: 0px;
+}
+.prize-container h1 {
+  font-size: 25px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 20px;
+}
+.prize-container p {
+  padding-bottom: 20px;
+  font-size: 18px;
+}
+.prize-container a {
+  color: #fff !important;
+  text-decoration: underline;
+}
 form section,
 section.form-section {
   background: #f5f5f5;
