MZ-194 change prize generation proccess

--- a/src/Mzayad.Web/Views/Prize/Index.cshtml
+++ b/src/Mzayad.Web/Views/Prize/Index.cshtml
@@ -100,7 +100,7 @@
             var winningSegment = theWheel.getIndicatedSegment();
             alertify.alert(message, function() {
                 if (type == 3) {
-                    location.href = "prize//select-avatar";
+                    location.href = "/en/prize/select-avatar";
                 }
             });
         };
@@ -113,7 +113,7 @@
                 if (wheelSpinning == false) {
 
                     $.ajax({
-                        url: "prize/@Model.PrizeId/random-prize",
+                        url: "/en/prize/@Model.PrizeId/random-prize",
                         context: document.body,
                         method: 'POST',
                         data: { id:"@Model.PrizeId" }
