--- a/src/Mzayad.Web/Views/Orders/Success.cshtml
+++ b/src/Mzayad.Web/Views/Orders/Success.cshtml
@@ -18,17 +18,8 @@
 
 @if (!string.IsNullOrEmpty(Model.RedirectUrl))
 {
-    <div class="prize-container">
-        <img src="https://az723232.vo.msecnd.net/assets/prize-icon.svg"/>
-        <h1>
-            @Global.Congratulations
-        </h1>
-        <p>
-            @Html.Raw(string.Format(Global.PrizeChanceMessage, Model.RedirectUrl))
-        </p>
-    </div>
+    @Html.Partial("_UserPrizeNotification", Model.RedirectUrl)
 }
-
 
 @Html.Partial("OrderDetailsSummary", Model)
 
