--- a/src/Mzayad.Web/Views/Shared/EditorTemplates/DateTimePicker.cshtml
+++ b/src/Mzayad.Web/Views/Shared/EditorTemplates/DateTimePicker.cshtml
@@ -7,10 +7,12 @@
 
     if (Model.HasValue)
     {
-        date = Model.Value.ToString("dd/MM/yyyy");
-        dateTime = Model.Value.AddHours(-3).ToString("u"); // AST -> UTC
-        hour = Model.Value.Hour;
-        minute = Model.Value.Minute;
+        var astDate = Model.Value;
+        astDate = astDate.AddHours(-3);
+        date = astDate.ToString("dd/MM/yyyy");
+        dateTime = astDate.AddHours(-3).ToString("u"); // AST -> UTC
+        hour = astDate.Hour;
+        minute = astDate.Minute;
     }
 }
 
